--- a/css/style.css
+++ b/css/style.css
@@ -605,8 +605,32 @@ video {
   right: -5rem;
 }
 
+.my-10 {
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
+}
+
+.mx-10 {
+  margin-left: 2.5rem;
+  margin-right: 2.5rem;
+}
+
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.mx-12 {
+  margin-left: 3rem;
+  margin-right: 3rem;
+}
+
 .mt-4 {
   margin-top: 1rem;
+}
+
+.ml-56 {
+  margin-left: 14rem;
 }
 
 .mr-40 {
@@ -617,36 +641,32 @@ video {
   margin-right: 24rem;
 }
 
-.ml-80 {
-  margin-left: 20rem;
+.mt-5 {
+  margin-top: 1.25rem;
 }
 
-.ml-96 {
-  margin-left: 24rem;
-}
-
-.ml-60 {
-  margin-left: 15rem;
-}
-
-.ml-56 {
-  margin-left: 14rem;
+.mt-10 {
+  margin-top: 2.5rem;
 }
 
 .block {
   display: block;
 }
 
+.inline-block {
+  display: inline-block;
+}
+
 .flex {
   display: flex;
 }
 
-.h-16 {
-  height: 4rem;
-}
-
 .h-full {
   height: 100%;
+}
+
+.h-16 {
+  height: 4rem;
 }
 
 .h-40 {
@@ -657,16 +677,8 @@ video {
   height: 8rem;
 }
 
-.h-20 {
-  height: 5rem;
-}
-
 .h-24 {
   height: 6rem;
-}
-
-.min-h-full {
-  min-height: 100%;
 }
 
 .w-full {
@@ -675,6 +687,26 @@ video {
 
 .w-16 {
   width: 4rem;
+}
+
+.w-8\/12 {
+  width: 66.666667%;
+}
+
+.w-5\/12 {
+  width: 41.666667%;
+}
+
+.w-64 {
+  width: 16rem;
+}
+
+.w-2\/6 {
+  width: 33.333333%;
+}
+
+.w-80 {
+  width: 20rem;
 }
 
 .max-w-5xl {
@@ -709,6 +741,23 @@ video {
   justify-content: space-around;
 }
 
+.overflow-scroll {
+  overflow: scroll;
+}
+
+.border {
+  border-width: 1px;
+}
+
+.border-solid {
+  border-style: solid;
+}
+
+.border-black {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
+}
+
 .bg-primary {
   --tw-bg-opacity: 1;
   background-color: rgb(0 86 107 / var(--tw-bg-opacity));
@@ -717,6 +766,37 @@ video {
 .bg-secondary {
   --tw-bg-opacity: 1;
   background-color: rgb(41 101 120 / var(--tw-bg-opacity));
+}
+
+.bg-purple {
+  --tw-bg-opacity: 1;
+  background-color: rgb(69 35 94 / var(--tw-bg-opacity));
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.bg-\[url\(\'\/images\/background\.jpg\'\)\] {
+  background-image: url('/images/background.jpg');
+}
+
+.bg-cover {
+  background-size: cover;
+}
+
+.bg-center {
+  background-position: center;
+}
+
+.bg-no-repeat {
+  background-repeat: no-repeat;
 }
 
 .px-6 {
@@ -754,12 +834,92 @@ video {
   padding-right: 0.25rem;
 }
 
-.pb-3 {
-  padding-bottom: 0.75rem;
+.py-48 {
+  padding-top: 12rem;
+  padding-bottom: 12rem;
+}
+
+.px-16 {
+  padding-left: 4rem;
+  padding-right: 4rem;
+}
+
+.py-24 {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+}
+
+.px-14 {
+  padding-left: 3.5rem;
+  padding-right: 3.5rem;
+}
+
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.py-16 {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
+
+.px-12 {
+  padding-left: 3rem;
+  padding-right: 3rem;
+}
+
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 
 .pb-2 {
   padding-bottom: 0.5rem;
+}
+
+.pb-3 {
+  padding-bottom: 0.75rem;
+}
+
+.pb-10 {
+  padding-bottom: 2.5rem;
+}
+
+.pt-32 {
+  padding-top: 8rem;
+}
+
+.pl-40 {
+  padding-left: 10rem;
+}
+
+.pr-8 {
+  padding-right: 2rem;
+}
+
+.pr-3 {
+  padding-right: 0.75rem;
+}
+
+.pl-2 {
+  padding-left: 0.5rem;
+}
+
+.pl-4 {
+  padding-left: 1rem;
+}
+
+.pt-4 {
+  padding-top: 1rem;
+}
+
+.text-left {
+  text-align: left;
+}
+
+.text-center {
+  text-align: center;
 }
 
 .font-sans {
@@ -776,8 +936,32 @@ video {
   line-height: 2rem;
 }
 
+.text-9xl {
+  font-size: 8rem;
+  line-height: 1;
+}
+
+.text-6xl {
+  font-size: 3.75rem;
+  line-height: 1;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
+}
+
 .font-bold {
   font-weight: 700;
+}
+
+.font-normal {
+  font-weight: 400;
 }
 
 .uppercase {
@@ -789,13 +973,20 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.duration-150 {
+  transition-duration: 150ms;
+}
+
 html {
-  display: block;
   font-size: 62.5%;
-  height: 100%;
   background-color: #f3f3f3;
-  -webkit-font-smoothing: antialiased;
   font-family: 'Open sans','Helvetica','Arial',sans-serif;
+  margin: 0 auto;
 }
 
 .text-xl {
@@ -806,7 +997,68 @@ html {
   border-right: 1px solid rgba(255,255,255,.3);
 }
 
+.border-r-black-1 {
+  position: relative;
+}
+
+.border-r-black-1:after {
+  content: " ";
+  position: absolute;
+  border-left: 1px solid black;
+  top: 20%;
+  right: 0;
+  margin-left: 8px;
+  height: 60%;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.border-t-black-1 {
+  position: relative;
+}
+
+.border-t-black-1:after {
+  content: " ";
+  position: absolute;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+  top: 0;
+  width: 60%;
+}
+
+.border-b-black-1 {
+  position: relative;
+}
+
+.border-b-black-1:after {
+  content: " ";
+  position: absolute;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+  bottom: 0;
+  width: 80%;
+}
+
 .leftt-1\/5 {
   margin-left: 85%;
 }
 
+.img-height {
+  height: 515px;
+}
+
+.text-shadow {
+  text-shadow: 0 0 30px #000;
+}
+
+.max-w-5xl {
+  max-width: 1024px;
+}
+
+.p-subheading-w {
+  width: 700px;
+}
+
+.button-radius {
+  border-radius: 5rem;
+}
