--- a/input.css
+++ b/input.css
@@ -2,13 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+
 html {
-    display: block;
     font-size: 62.5%;
-    height: 100%;
     background-color: #f3f3f3;
-    -webkit-font-smoothing: antialiased;
     font-family: 'Open sans','Helvetica','Arial',sans-serif;
+    margin: 0 auto;
 }
 
 .text-xl {
@@ -19,7 +18,68 @@ html {
     border-right: 1px solid rgba(255,255,255,.3);
 }
 
+.border-r-black-1 {
+    position: relative;
+}
+
+.border-r-black-1:after {
+    content: " ";
+    position: absolute;
+    border-left: 1px solid black;
+    top: 20%;
+    right: 0;
+    margin-left: 8px;
+    height: 60%;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+.border-t-black-1 {
+    position: relative;
+}
+
+.border-t-black-1:after {
+    content: " ";
+    position: absolute;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    top: 0;
+    width: 60%;
+}
+
+.border-b-black-1 {
+    position: relative;
+}
+
+.border-b-black-1:after {
+    content: " ";
+    position: absolute;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    bottom: 0;
+    width: 80%;
+}
+
 .leftt-1\/5 {
     margin-left: 85%;
 }
 
+.img-height {
+    height: 515px;
+}
+
+.text-shadow {
+    text-shadow: 0 0 30px #000; 
+}
+
+.max-w-5xl {
+    max-width: 1024px;
+}
+
+.p-subheading-w {
+    width: 700px;
+}
+
+.button-radius {
+    border-radius: 5rem;
+}
